--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link ref="style.css" type="text/css"/>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
+    <div>
+        <img src="https://imgs.search.brave.com/4SyI1wDj0Ys5siRslqcHuRs8QZHTpr_vbGx8lVM_ALI/rs:fit:860:0:0/g:ce/aHR0cHM6Ly93d3cu/dGhlZGFpbHltZWFs/LmNvbS9pbWcvZ2Fs/bGVyeS9ncmF0dWl0/eS1ndWlkZS1ob3ct/bXVjaC10by10aXAt/c2VydmVycy1kZWxp/dmVyeS1kcml2ZXJz/LWFuZC1tb3JlL2lT/dG9jay0xMDQ0MTc3/ODEwLmpwZw"/>
+    </div>
+
+    <div id="calculator">
+        <h2>Tip Calculator</h2>
+        <label for="billAmount">Bill Amount:</label>
+        <input type="number" id="billAmount" placeholder="Enter the bill amount">
+
+        <label for="tipPercentage">Tip Percentage:</label>
+        <input type="number" id="tipPercentage" placeholder="Enter the tip percentage">
+
+        <button onclick="calculateTip()">Calculate Tip</button>
+
+        <div id="result"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
